Closed Bug 124252 Opened 23 years ago Closed 23 years ago

nsDocument::Init() gets called twice, giving assertion.

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla0.9.9

People

(Reporter: pj, Assigned: jst)

Details

(Whiteboard: [HAVE FIX])

Attachments

(2 files)

In nsDocument.cpp:395 the NS_ASSURE_TRUE(rv) gets triggered due to calling
nsDocument::Init() twice with the testcase. (Will attach). 

This might be related to bug 117693 or 92577 (Pointer corruption, crashes
happens for me at random places).
Causes nsDocument::Init() to return NS_ERROR_ALREADY_DEFINED.
Of course I mean NS_ERROR_ALREADY_INITIALIZED and not NS_ERROR_ALREADY_DEFINED,
sorry.
Confirming and accepting. Patch coming up.
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Whiteboard: [HAVE FIX]
Target Milestone: --- → mozilla0.9.9
Attached patch Proposed fix.Splinter Review
Comment on attachment 68451 [details] [diff] [review]
Proposed fix.

sr=vidur
Attachment #68451 - Flags: superreview+
Comment on attachment 68451 [details] [diff] [review]
Proposed fix.

sr=vidur
Comment on attachment 68451 [details] [diff] [review]
Proposed fix.

r=jkeiser
Attachment #68451 - Flags: review+
Fixed. I highly doubt this has anything to do with a crash. Marking FIXED.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Component: DOM: HTML → DOM: Core & HTML
QA Contact: stummala → general
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: