Fixing bug 124252. Calling Init() from nsImageDocument::StartDocumentLoad() is pointless, Init() has already been called and any subsequent calls do nothing (but assert). r=jkeiser@iname.com, sr=vidur@netscape.com